--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -131,11 +131,11 @@ input, select, textarea {
 	}
 
 		h2.alt {
-			color: #888;
+			color: rgb(0, 0, 0);
 		}
 
 			h2.alt strong {
-				color: #666;
+				color: rgb(216, 39, 39);
 			}
 
 	h3 {
@@ -2052,7 +2052,7 @@ input, select, textarea {
 		justify-content: space-between;
 		background: #222629 url("images/overlay.png");
 		box-shadow: inset -0.25em 0 0.25em 0 rgba(0, 0, 0, 0.1);
-		color: #fff;
+		color: rgb(173, 45, 45);
 		height: 100%;
 		left: 0;
 		overflow-y: auto;
@@ -2231,7 +2231,7 @@ input, select, textarea {
 				}
 
 				#main > section.dark strong {
-					color: #fff;
+					/*color: #fff;*/
 					border-color: inherit;
 				}
 
@@ -2252,7 +2252,7 @@ input, select, textarea {
 
 			#main > section.one {
 				background-color: #81918E;
-				background-image: url("../../images/banner.jpg");
+				background-image: url("../../images/banner.png");
 			}
 
 			#main > section.two {
