--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2251,7 +2251,7 @@ input, select, textarea {
 			}
 
 			#main > section.one {
-				background-color: #81918E;
+				background-color: #53a395;
 				background-image: url("images/banner.jpg");
 			}
 
