--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2260,7 +2260,7 @@ input, select, textarea {
 			}
 
 			#main > section.three {
-				background-color: #ecf1f1;
+				background-color: #81918E;
 			}
 
 			#main > section.four {
