--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2251,7 +2251,7 @@ input, select, textarea {
 			}
 
 			#main > section.one {
-				background-color: #53a395;
+				background-color: #f5fafa;
 				background-image: url("images/banner.jpg");
 			}
 
@@ -2260,11 +2260,11 @@ input, select, textarea {
 			}
 
 			#main > section.three {
-				background-color: #81918E;
+				background-color: #f5fafa;
 			}
 
 			#main > section.four {
-				background-color: #81918E;
+				background-color: #f5fafa;
 			}
 
 /* Wide */
